--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,6 @@ click = "^8.0.3"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+wikipy = "wikipy.console:main"
