--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ keywords = ["wikipy"]
 [tool.poetry.dependencies]
 python = "^3.7"
 click = "^8.0.3"
+requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
 
