--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ click = "^8.0.3"
 requests = "^2.26.0"
 pytest = "^6.2.5"
 pytest-mock = "^3.6.1"
+flake8 = "^4.0.1"
+black = "^21.12b0"
 
 [tool.poetry.dev-dependencies]
 
