--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -30,4 +30,4 @@ jobs:
         run: poetry run black .
 
       - name: Test with pytest
-        run: poetry run pytest
+        run: poetry run pytest --cov=wikipy
